--- a/tratamento-dados/criacao-vocabulario.ipynb
+++ b/tratamento-dados/criacao-vocabulario.ipynb
@@ -194,7 +194,7 @@
        "      <td>64</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Agricultura, Pecuária, Pesca e Extrativismo</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>assentado assentados assentamento assentamento...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -231,7 +231,7 @@
        "\n",
        "                                           descricao  \n",
        "0                                                NaN  \n",
-       "1                                                NaN  \n",
+       "1  assentado assentados assentamento assentamento...  \n",
        "2  territporios obra-de-arte histórico-cultural a...  \n",
        "3                             natalidade pacificação  \n",
        "4                                                NaN  "
@@ -325,45 +325,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Arte, Cultura e Religião</td>\n",
-       "      <td>territporios</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Agricultura, Pecuária, Pesca e Extrativismo</td>\n",
+       "      <td>assentado</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Arte, Cultura e Religião</td>\n",
-       "      <td>obra-de-arte</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Agricultura, Pecuária, Pesca e Extrativismo</td>\n",
+       "      <td>assentados</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Arte, Cultura e Religião</td>\n",
-       "      <td>histórico-cultural</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Agricultura, Pecuária, Pesca e Extrativismo</td>\n",
+       "      <td>assentamento</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Arte, Cultura e Religião</td>\n",
-       "      <td>aleijadinho</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Agricultura, Pecuária, Pesca e Extrativismo</td>\n",
+       "      <td>assentamentos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Arte, Cultura e Religião</td>\n",
-       "      <td>ancine</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Agricultura, Pecuária, Pesca e Extrativismo</td>\n",
+       "      <td>assentimento</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  cod                      tema       palavra_chave\n",
-       "0  35  Arte, Cultura e Religião        territporios\n",
-       "1  35  Arte, Cultura e Religião        obra-de-arte\n",
-       "2  35  Arte, Cultura e Religião  histórico-cultural\n",
-       "3  35  Arte, Cultura e Religião         aleijadinho\n",
-       "4  35  Arte, Cultura e Religião              ancine"
+       "  cod                                         tema  palavra_chave\n",
+       "0  64  Agricultura, Pecuária, Pesca e Extrativismo      assentado\n",
+       "1  64  Agricultura, Pecuária, Pesca e Extrativismo     assentados\n",
+       "2  64  Agricultura, Pecuária, Pesca e Extrativismo   assentamento\n",
+       "3  64  Agricultura, Pecuária, Pesca e Extrativismo  assentamentos\n",
+       "4  64  Agricultura, Pecuária, Pesca e Extrativismo   assentimento"
       ]
      },
      "execution_count": 14,
@@ -384,7 +384,7 @@
     {
      "data": {
       "text/plain": [
-       "(109, 3)"
+       "(412, 3)"
       ]
      },
      "execution_count": 15,
@@ -413,7 +413,7 @@
     {
      "data": {
       "text/plain": [
-       "(109, 3)"
+       "(411, 3)"
       ]
      },
      "execution_count": 16,
