--- a/tratamento-dados/tratamento-proposicoes.ipynb
+++ b/tratamento-dados/tratamento-proposicoes.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_proposicoes = glob.glob('../dados/proposicoes/*')"
+    "lista_proposicoes = glob.glob('../dados/proposicoes/propo*')"
    ]
   },
   {
