insere shape das candidaturas eleitas

--- a/tratamento-dados/tratamento-candidaturas-eleitas.ipynb
+++ b/tratamento-dados/tratamento-candidaturas-eleitas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5e2f4128-f32d-406a-a939-b4b819f211b3",
    "metadata": {},
    "outputs": [],
@@ -29,12 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ede19130-2dab-4632-8f57-fe31e2ec44a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_deputadas_1934_2023 = pd.read_csv('../dados/deputadas_1934_2023.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4d9d020d-b6d0-40e0-9402-ca1fdaed2e6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10745, 10)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_deputadas_1934_2023.shape"
    ]
   },
   {
